--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="in.zerob13.android.PureColor" >
+    package="in.zerob13.android.PureColor"
+    android:installLocation="auto"
+    android:versionCode="1"
+    android:versionName="0.1 alpha">
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name="in.zerob13.android.PureColor.ColorItemListActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,11 +22,14 @@
         <activity
             android:name="in.zerob13.android.PureColor.ColorItemDetailActivity"
             android:label="@string/title_coloritem_detail"
-            android:parentActivityName="in.zerob13.android.PureColor.ColorItemListActivity" >
+            android:parentActivityName="in.zerob13.android.PureColor.ColorItemListActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="in.zerob13.android.PureColor.ColorItemListActivity" />
         </activity>
     </application>
 
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.SET_WALLPAPER" />
 </manifest>
