--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="in.zerob13.android.PureColor"
     android:installLocation="auto"
-    android:versionCode="1"
-    android:versionName="0.1 alpha">
+    android:versionCode="2"
+    android:versionName="0.2 beta">
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:debuggable="true"
+        android:debuggable="false"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
