--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="in.zerob13.android.PureColor"
-    android:installLocation="auto"
-    android:versionCode="2"
-    android:versionName="0.2 beta">
+    android:installLocation="auto">
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:debuggable="false"
+        android:debuggable="true"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
