--- a/.travis.yml
+++ b/.travis.yml
@@ -29,4 +29,5 @@ before_install:
 before_script:
   - adb wait-for-device
   - adb shell input keyevent 82 &
-
+script:
+  - ./gradlew connectedInstrumentTest
