--- a/.travis.yml
+++ b/.travis.yml
@@ -19,10 +19,12 @@ before_install:
   - export PATH=$GRADLE_HOME/bin:$PATH
 
   # install android build tools
-  - wget https://dl-ssl.google.com/android/repository/build-tools_r19-linux.zip
-  - unzip build-tools_r19-linux.zip -d $ANDROID_HOME
+  - wget https://dl-ssl.google.com/android/repository/build-tools_r19.0.2-linux.zip
+  - unzip build-tools_r19.0.2-linux.zip -d $ANDROID_HOME
   - mkdir -p $ANDROID_HOME/build-tools/
-  - mv $ANDROID_HOME/android-4.4 $ANDROID_HOME/build-tools/19
+  - cp $ANDROID_HOME/android-4.4 $ANDROID_HOME/build-tools/19.0.2
+  - mv $ANDROID_HOME/android-4.4 $ANDROID_HOME/build-tools/android-4.4
+
 
   # Install required components.
   # For a full list, run `android list sdk -a --extended`
