--- a/.travis.yml
+++ b/.travis.yml
@@ -46,5 +46,4 @@ before_script:
   - adb shell input keyevent 82 &
 
 script:
-    - echo $TRAVIS_BUILD_DIR
-    - TERM=dumb ./gradlew build bintrayUpload
+    - ./gradlew connectedInstrumentTest
